https://online.sbis.ru/opendoc.html?guid=1d7970a4-718c-42ce-8a16-416bfc95b9d7

--- a/Controls-default-theme/_notAliasesToDelete.less
+++ b/Controls-default-theme/_notAliasesToDelete.less
@@ -108,18 +108,6 @@
 @color_shadow_light:                rgba(0,0,0,.15);
 @color_shadow_dark:                 rgba(0, 0, 0, 0.45);
 
-// icon urls
-@closeIconSvg-toolButton:            url('../Controls-default-theme/img/DefaultCloseIcon.svg');
-@closeIconSvg-toolButton-hovered:    url('../Controls-default-theme/img/CloseIconHovered.svg');
-@closeIconSvg-link:                  url('../Controls-default-theme/img/LightCloseIcon.svg');
-@closeIconSvg-link_hovered:          url('../Controls-default-theme/img/CloseIconHovered.svg');
-@backArrowOrangeSmall_icon:          url('../Controls-default-theme/img/BackArrowOrangeSmall.svg');
-@backArrowOrange_icon:               url('../Controls-default-theme/img/BackArrowOrange.svg');
-@backArrowBlueSmall_icon:            url('../Controls-default-theme/img/BackArrowBlueSmall.svg');
-@backArrowBlue_icon:                 url('../Controls-default-theme/img/BackArrowBlue.svg');
-@loadingIndicator_icon_l:            url('/cdn/LoaderIndicator/1.0.0/ajax-loader-indicator.gif');
-@loadingIndicator_icon_s:            url('/cdn/LoaderIndicator/1.0.0/ajax-loader-indicator-16-16.gif');
-
 // border
 @border-style_solid:       solid;
 
@@ -212,12 +200,6 @@
 @color_TreeGridView-expander_val:                                 #313E78;
 @border-color_TreeGridView-item_dragging_val:                     #0055BB;
 
-// DialogTemplate
-@spacing_dialogTemplate-between-head-border-right_val:                    48px;
-@line-height_dialogTemplate_caption_val:                                  42px;
-
-@font-weight_dialogTemplate_head_val:                                     bold;
-
 // TileView
 @spacing_TileView-between-title-topBorder_val:                            4px;
 @spacing_TileView-between-title-bottomBorder_val:                         2px;
@@ -242,7 +224,6 @@
 @height_SortingArrow-icon_val:                                            12px;
 
 // Back
-@spacing_Back_between_icon_caption_standart_val:                          3px;
 @height_ItemActions_outside_val:                                          31px;
 @spacing_ItemActions-between-content-border-top_position_inside_val:      3px;
 @spacing_ItemActions-between-content-border-bottom_position_inside_val:   3px;
@@ -259,38 +240,16 @@
 @max-width_Swipe-title_position_bottom_val:                               160px;
 @max-width_Swipe-title_position_right_val:                                220px;
 @animation-offset-Swipe-left-to-right_val:                                16px;
-@width-Back__icon_size-s_val:                                             9px;
-@width-Back__icon_size-m_val:                                             9px;
-@width-Back__icon_size-l_val:                                             10px;
-@height-Back__icon_size-s_val:                                            11px;
-@height-Back__icon_size-m_val:                                            12px;
-@height-Back__icon_size-l_val:                                            14px;
-@content_Back_secondary_val:                                              '';
-@content_Back_primary_val:                                                '';
-@font-weight_Back_val:                                                    bold;
-@color-Back__caption_style-primary_val:                                   #D94700;
-@color-Back__caption_style-secondary_val:                                 #313E78;
-@color-Back__caption_style-secondary_hovered_val:                         #0055BB;
-
 
 //FilterView TODO: https://online.sbis.ru/opendoc.html?guid=a4b1e32b-4cfa-4b80-be2a-b763b580293a
 @color_FilterView-editor-DateRange_readOnly:                              @label_text-color;
 //FilterDetailPanel
 @color_FilterPanel-DateRange:                                             @color_link-hover;
 
-// BreadCrumbs
-@max-width_BreadCrumbs-menu_val:                                          800px;
-@min-width_BreadCrumbs-text_val:                                          32px;
-@spacing_BreadCrumbs-menu_val:                                            -25px;
-@box-shadow_BreadCrumbs-menu_val:                                         -8px -5px 4px 4px @background-color_default;
-
 // DigitButton
 @min-width_Paging-digitButton_val:                                        28px;
 @background-color_Paging-digitButton_hover_val:                           #F0F5FB;
 @background-color_Paging-button_hover_val:                                #F0F5FB;
-
-// LoadingIndicator
-@color_LoadingIndicator-overlay-default_val:                              transparent;
 
 // Misspell
 @text-decoration_Misspell-caption_hover_val:    underline;
@@ -341,11 +300,7 @@
 // DatePicker
 @spacing_DatePicker-between-input-button:                                 @trigger-offset_inputDate; // дублирует стиль новой спецификации, удаляем
 
-//DialogTemplate
-@height_DialogTemplate-top-area-val:                                      @header-min-height_dialog; // дублирует стиль новой спецификации, удаляем
-@height_dialogTemplate_footer_val:                                        @footer_min-height_dialog; // дублирует стиль новой спецификации, удаляем
 //background-color
-@background-color_dialogTemplate-content:      @background-color_dialog; // дублирует стиль новой спецификации, удаляем
 @background-color_dialogTemplate-top-area:     @header_background-color_dialog; // дублирует стиль новой спецификации, удаляем
 @background-color_dialogTemplate-footer:       @footer_background-color_dialog; // дублирует стиль новой спецификации, удаляем
 
@@ -355,25 +310,12 @@
 @color_DialogTemplate-caption-info:                  @text-color; // дублирует стиль новой спецификации, удаляем
 @spacing_DialogTemplate-between-caption-border-left: @header_padding-left_dialog; // дублирует стиль новой спецификации, удаляем
 @height_dialogTemplate_caption:                      @header-min-height_dialog; // дублирует стиль новой спецификации, удаляем
-@line-height_dialogTemplate_caption:                 @line-height_dialogTemplate_caption_val;//TODO убрать после https://online.sbis.ru/opendoc.html?guid=84a9522d-7f33-47c8-8b2e-905cd1acc335
+@line-height_dialogTemplate_caption:                 42px;//TODO убрать после https://online.sbis.ru/opendoc.html?guid=84a9522d-7f33-47c8-8b2e-905cd1acc335
 
 //head
 @font-size_dialogTemplate_head:                       @font-size_3xl; // дублирует стиль новой спецификации, удаляем
-@font-weight_dialogTemplate_head:                     @font-weight_dialogTemplate_head_val; // дублирует стиль новой спецификации, удаляем
-@spacing_dialogTemplate-between-head-border-right:    @spacing_dialogTemplate-between-head-border-right_val; //TODO непонятно
 @spacing_DialogTemplate-between-content-close-button: @header-content_padding-right_dialog;  // дублирует стиль новой спецификации, удаляем
 @spacing_DialogTemplate-between-border-close-button:  @close-button_padding-top_dialog; // дублирует стиль новой спецификации, удаляем
-@height_DialogTemplate-top-area:                      @header-min-height_dialog; // дублирует стиль новой спецификации, удаляем
-
-//border
-@color-border_DialogTemplate:             @border-color_dialog; // дублирует стиль новой спецификации, удаляем
-@size_DialogTemplate-border:              @border-thickness_dialog; // дублирует стиль новой спецификации, удаляем
-@color_DialogTemplate-border-top-footer:  @footer_top-border-color_dialog; // дублирует стиль новой спецификации, удаляем
-
-@height_dialogTemplate_footer:  @footer_min-height_dialog; // дублирует стиль новой спецификации, удаляем
-//shadow
-@size_DialogTemplate-shadow:     @size_shadow_default; // вообще не нужно, удаляем
-@color_DialogTemplate-shadow:    @color_shadow_popup; // вообще не нужно, удаляем
 
 @margin_dialogTemplate_head:                                              0 48px 0 0; //TODO непонятно
 @height_dialogTemplate_caption:                                           @header-min-height_dialog; // дублирует стиль новой спецификации, удаляем
@@ -395,7 +337,6 @@
 @spacing_StackTemplate-between-caption-border-top_val:            @header_lineheight_stack; // дублирует стиль новой спецификации, удаляем
 
 @background-color_StackTemplate:                               @background-color_stack; // дублирует стиль новой спецификации, удаляем
-@min-height_StackTemplate-head:                                @header_min-height_stack; // дублирует стиль новой спецификации, удаляем
 @background-color_StackTemplate-head:                          @header_background-color_stack; // дублирует стиль новой спецификации, удаляем
 @thickness_StackTemplate-border-bottom:                        @header_bottom-border-thickness_stack; // дублирует стиль новой спецификации, удаляем
 @color_StackTemplate-border-bottom:                            @header_bottom-border-color_stack; // дублирует стиль новой спецификации, удаляем
@@ -417,8 +358,6 @@
 @color_StackTemplate-caption_info:                            @label_text-color; // вообще не нужно, удаляем
 @font-size_StackTemplate-caption_info:                        @font-size_m; // вообще не нужно, удаляем
 @font-weight_StackTemplate-caption_info:                      @font-weight_StackTemplate-caption_info_val; // вообще не нужно, удаляем
-@background-color_StackTemplate-footer:                        @footer_background-color_stack; // вообще не нужно, удаляем
 
 @height_Tabs:                                                   @item_height_tabs;//TODO: сначала удалить в engine
-
 //last line
