--- a/Controls-default-theme/controls/_BaseControl.less
+++ b/Controls-default-theme/controls/_BaseControl.less
@@ -3,7 +3,7 @@
 @border-width_BaseControl-scrollPaging-top:                         @thickness_border_default;
 @width_BaseControl-loadingIndicator-img:                            @size_icon_l;
 @height_BaseControl-loadingIndicator-img:                           @size_icon_l;
-@background-image_BaseControl-loadingIndicator:                     @loadingIndicator_icon_l;
+@background-image_BaseControl-loadingIndicator:                     @spinner_l_background-image_loadingIndicator;
 @background-color_BaseControl-loadingIndicator:                     @background-color_default;
 @spacing_BaseControl-loadingIndicator-between-top-border-content:   @spacing_default_m;
 @spacing_BaseControl-loadingIndicator-between-bottom-border-content:@spacing_default_m;
