--- a/Controls-demo/Tabs/Buttons/Buttons.less
+++ b/Controls-demo/Tabs/Buttons/Buttons.less
@@ -61,7 +61,7 @@
 //сделал чтоб не ломать Петины демки.
 .demo-TabButtons {
   display: flex;
-   .controls-Tabs_theme_@{themeName} {
+   .controls-Tabs {
        width: 100%;
    }
 }
