https://online.sbis.ru/opendoc.html?guid=c0b2a5cf-812e-4a13-b839-bf278aa9526c

--- a/Controls-default-theme/dark/_aliases.less
+++ b/Controls-default-theme/dark/_aliases.less
@@ -202,6 +202,9 @@
 @border-color_HorizontalScroll-shadow:                                        rgba(107, 107, 107, .44);
 @color_Grid-header:                                                           #999;
 @background-color_StickyHeader:                                               transparent;
+@start-color-gradient_ColumnScroll-shadow:                                    rgba(0,0,0,.15);
+@end-color-gradient_ColumnScroll-shadow:                                      rgba(0,0,0,0);
+@border-color_ColumnScroll-shadow:                                            #393E46;
 
 // ItemActions
 @default-bg-color-hovered-item: #464d57;
