--- a/Controls/_masterDetail/Base/_Base.less
+++ b/Controls/_masterDetail/Base/_Base.less
@@ -2,9 +2,12 @@
    display: flex;
 }
 
+.controls-MasterDetail_master_theme-@{themeName} {
+   background-color: @background-color_List-masterList;
+}
+
 .controls-MasterDetail_master {
    position: relative;
-   background-color: @background-color_List-masterList;
    flex-shrink: 0;
    width: 27%;
 
@@ -22,19 +25,26 @@
    &:before {
       content: '';
       z-index: 0;
-      width: @border-width_List-masterList-right;
-      background-color: @border-color_List-masterList;
       height: 100%;
       position: absolute;
       right: 0;
       top: 0;
    }
 }
+
+.controls-MasterDetail_master-template_theme-@{themeName} {
+   &:before {
+      width: @border-width_List-masterList-right;
+      background-color: @border-color_List-masterList;
+   }
+}
 .controls-MasterDetail_details {
-   background-color: @background-color_List-masterList-details;
    min-width: 1px;
 }
 
+.controls-MasterDetail_details_theme-@{themeName} {
+   background-color: @background-color_List-masterList-details;
+}
 .controls-MasterDetail_resizing-line {
    position: absolute;
    right: 0;
