https://online.sbis.ru/opendoc.html?guid=1f4a8704-fe2b-4fb8-abd2-d4de3c417290

--- a/Controls-default-theme/aliases/_controls.less
+++ b/Controls-default-theme/aliases/_controls.less
@@ -5,6 +5,7 @@
 @import "_dragnDrop";
 @import "_slider";
 @import "_input";
+@import "_list";
 @import "_editableArea";
 @import "_popupTemplate";
 @import "_progress";
