https://online.sbis.ru/opendoc.html?guid=2b9c9e47-b0e3-47e0-ba5d-2daba386e365

--- a/Controls-default-theme/dark/_aliases.less
+++ b/Controls-default-theme/dark/_aliases.less
@@ -160,6 +160,16 @@
 @monthview_item_text-color_monthSlider:                                       #b8b8b8;
 @monthview_item_hover_border-color_monthSlider:                               #b8b8b8;
 
+// Controls/DatePopup
+@background-color_datePicker:                                              #383d44;
+@header_background-color_datePicker:                                       #383d44;
+@border-color_datePicker:                                                  #30343b;
+
+// Controls/DateRange
+@monthnav_item_text-color_datePicker:                                      #b8b8b8;
+@monthnav_item_border-color_datePicker:                                    #535c68;
+@monthlist_heading_text-color_datePicker:                                  #cccccc;
+
 //TODO OLD NOT SPECIFIED VARIABLES
 
 @cloud-background-color:                                                      #383d44;
@@ -211,18 +221,8 @@
 @background-color_ItemActions: #464d57;
 @icon-color-primary-hover: #ff7033;
 
-// Controls/DatePopup
-@background-color_PeriodDialog:                                               #383d44;
-@background-color__PeriodDialog-header:                                       #383d44;
-@border-color_PeriodDialog:                                                   #30343b;
-
 // Controls/DateRangeBigChoose
 @border-color_DateRangeBigChoose:                                             #535c68;
-
-// Controls/DateRange
-@color_PeriodDialog-dateRange-months-button:                                  #b8b8b8;
-@border-color_PeriodDialog-dateRange-months:                                  #535c68;
-@color_PeriodDialog-dateRange-monthsWithDates-title:                          #cccccc;
 
 // Highlight
 @highlight-text-bg: #535c68;
@@ -231,7 +231,6 @@
 @background-color_Paging:                                                     #424851;
 @background-color_Paging-button:                                              #424851;
 @background-color_Paging-button_hover:                                        #464d57;
-
 @color_Paging_arrow-icon:                                                     @secondary_color;
 
 //last line
