https://online.sbis.ru/opendoc.html?guid=1d7970a4-718c-42ce-8a16-416bfc95b9d7

--- a/Controls-default-theme/_notAliasesToDelete.less
+++ b/Controls-default-theme/_notAliasesToDelete.less
@@ -360,4 +360,6 @@
 @font-weight_StackTemplate-caption_info:                      @font-weight_StackTemplate-caption_info_val; // вообще не нужно, удаляем
 
 @height_Tabs:                                                   @item_height_tabs;//TODO: сначала удалить в engine
+@background-color_dialogTemplate-content:      @background-color_dialog; //presto, retail
+
 //last line
