--- a/Controls-default-theme/aliases/_list.less
+++ b/Controls-default-theme/aliases/_list.less
@@ -1,5 +1,5 @@
-@icon_background-image_listAddButton:                               url('../Controls-default-theme/img/AddButtonEnable.svg');
-@readonly_icon_background-image_listAddButton:                      url('../Controls-default-theme/img/AddButtonDisable.svg');
+@icon_background-image_listAddButton:                               url('../../Controls-default-theme/img/AddButtonEnable.svg');
+@readonly_icon_background-image_listAddButton:                      url('../../Controls-default-theme/img/AddButtonDisable.svg');
 @icon-size_listAddButton:                                           8px;
 @icon_offset_listAddButton:                                         4px;
 @text-color_listAddButton:                                          @label_text-color;
