https://online.sbis.ru/opendoc.html?guid=08698d2a-7415-48c5-ab34-dd41b9c872aa

--- a/Controls-default-theme/_notAliasesToDelete.less
+++ b/Controls-default-theme/_notAliasesToDelete.less
@@ -361,5 +361,6 @@
 
 @height_Tabs:                                                   @item_height_tabs;//TODO: сначала удалить в engine
 @background-color_dialogTemplate-content:      @background-color_dialog; //presto, retail
+@size_DialogTemplate-shadow:                   @size_shadow_default; //  PrintingTemplates
 
 //last line
