https://online.sbis.ru/opendoc.html?guid=1b6662ef-286a-4606-9437-d3bfc4ea361d

--- a/Controls/_list/BaseControl/_BaseControl.less
+++ b/Controls/_list/BaseControl/_BaseControl.less
@@ -40,7 +40,7 @@ https://online.sbis.ru/opendoc.html?guid=16c81a19-f2a0-4b3f-a7e8-56d154b68e4c
 }
 
 .controls-BaseControl_paging-Padding {
-   height: @height_Paging-button;
+   height: @item_height_paging;
 }
 .ws-is-mobile-safari .controls-BaseControl_paging-Padding {
    height: 0;
@@ -88,7 +88,7 @@ https://online.sbis.ru/opendoc.html?guid=16c81a19-f2a0-4b3f-a7e8-56d154b68e4c
 }
 
 .controls-BaseControl_withPaging__loadingIndicator__state-down {
-   top: @height_Paging-button;
+   top: @item_height_paging;
 }
 
 .controls-BaseControl__loadingIndicator__state-all {
