--- a/Controls/_scroll/Scroll/_Scroll.less
+++ b/Controls/_scroll/Scroll/_Scroll.less
@@ -133,7 +133,7 @@
 }
 
 .controls-Scroll__content_paging::after {
-   padding-bottom: @height_Paging-button;
+   padding-bottom: @item_height_paging;
    content: '';
    display: block;
 }
