--- a/Controls-default-theme/aliases/_controls.less
+++ b/Controls-default-theme/aliases/_controls.less
@@ -7,6 +7,7 @@
 @import "_input";
 @import "_list";
 @import "_editableArea";
+@import "_paging";
 @import "_popupTemplate";
 @import "_progress";
 @import "_toggle";
