https://online.sbis.ru/opendoc.html?guid=1f4a8704-fe2b-4fb8-abd2-d4de3c417290

--- a/Controls-default-theme/aliases/_paging.less
+++ b/Controls-default-theme/aliases/_paging.less
@@ -22,6 +22,7 @@
 @item_offset_paging:                          2px;
 @item_hover_background-color_paging:          @hover_background-color;
 @item_height_paging:                          @inline_height_xl;
+@item_box-shadow_paging:                      none;
 
 // Элемент - стрелка
 
@@ -38,3 +39,4 @@
 
 @background-color_paging:                     @background-color;
 @padding-horizontal_paging:                   2px;
+@padding-vertical_paging:                     0;
