--- a/Controls/_paging/Paging/_Paging.less
+++ b/Controls/_paging/Paging/_Paging.less
@@ -2,6 +2,7 @@
    display: flex;
    justify-content: flex-end;
    background-color: @background-color_paging;
+   padding: @padding-vertical_paging 0;
 }
 .controls-Paging__btn {
    height: @item_height_paging;
@@ -11,6 +12,11 @@
    user-select: none;
    margin: 0;
    margin-left: @item_offset_paging;
+   box-shadow: @item_box-shadow_paging;
+
+   &:active {
+      box-shadow: none;
+   }
 }
 .controls-Paging__btn_first {
    margin-left: @padding-horizontal_paging;
