https://online.sbis.ru/opendoc.html?guid=c418aa5a-0dcc-4d77-8581-94f1d369582c

--- a/Controls-default-theme/aliases/_calendar.less
+++ b/Controls-default-theme/aliases/_calendar.less
@@ -29,6 +29,7 @@
 //
 //Размеры
 @monthview_item_height_monthSlider:                                            39px;
+@monthview_item_width_monthSlider:                                             @monthview_item_height_monthSlider;
 
 //Обводка
 @monthview_item_border-thickness_monthSlider:                                  @border-thickness;
