https://online.sbis.ru/opendoc.html?guid=bab76911-bc86-4bfd-84ee-e373b93db7c6

--- a/Controls-default-theme/aliases/_controls.less
+++ b/Controls-default-theme/aliases/_controls.less
@@ -20,6 +20,7 @@
 @import "_operations";
 @import "_filter";
 @import "_filterPopup";
+@import "_grid";
 @import "_search";
 @import "_loadingIndicator";
 @import "_shortDatePicker";
