https://online.sbis.ru/opendoc.html?guid=1f4a8704-fe2b-4fb8-abd2-d4de3c417290

--- a/Controls/_list/ListView/_ListView.less
+++ b/Controls/_list/ListView/_ListView.less
@@ -4,8 +4,7 @@
 
 .controls-ListViewV__loading {
    min-height: @height_BaseControl-loadingIndicator-img +
-               @spacing_BaseControl-loadingIndicator-between-top-border-content +
-               @spacing_BaseControl-loadingIndicator-between-bottom-border-content;
+               @content_l_padding_loadingIndicator * 2;
 }
 
 .controls-ListView__itemV_marker {
