--- a/Controls-default-theme/aliases/_scroll.less
+++ b/Controls-default-theme/aliases/_scroll.less
@@ -37,7 +37,7 @@
 
 // Переменные для скролл-контейнера
 
-@shadow_height_scroll:                               8px;
+@shadow_thickness_scroll:                            8px;
 @shadow_start-color_scroll:                          rgba(0, 0, 0, 0.15);
 @shadow_end-color_scroll:                            rgba(0, 0, 0, 0);
 
