--- a/Controls/_scroll/StickyHeader/_StickyHeader/_StickyHeader.less
+++ b/Controls/_scroll/StickyHeader/_StickyHeader/_StickyHeader.less
@@ -25,7 +25,7 @@
 }
 
 .controls-StickyHeader__shadow-bottom {
-   bottom: -@shadow_height_scroll;
+   bottom: -@shadow_thickness_scroll;
    background: linear-gradient(
       to bottom,
       @shadow_start-color_scroll, @shadow_end-color_scroll
@@ -33,7 +33,7 @@
 }
 
 .controls-StickyHeader__shadow-top {
-   top: -@shadow_height_scroll;
+   top: -@shadow_thickness_scroll;
    background: linear-gradient(
       to top,
       @shadow_start-color_scroll, @shadow_end-color_scroll
