--- a/Controls/_grid/layout/table/_Table.less
+++ b/Controls/_grid/layout/table/_Table.less
@@ -147,7 +147,7 @@
     //for the same reason as the problem described above, if in itemActions spacing between content and border-right will
     //realized by padding, itemActions will overlaps right shadow, with margin work fine
     padding-right: 0;
-    margin-right: @spacing_ItemActions-between-content-border-right_position_inside;
-    height: @height_ItemActions_inside - @border-width_List-masterList-item-bottom;
+    margin-right: @offset-right_itemActions;
+    height: @height_itemActions - @border-width_List-masterList-item-bottom;
   }
 }
