--- a/Controls/_list/BaseControl/_BaseControl.less
+++ b/Controls/_list/BaseControl/_BaseControl.less
@@ -18,7 +18,7 @@ https://online.sbis.ru/opendoc.html?guid=16c81a19-f2a0-4b3f-a7e8-56d154b68e4c
 }
 
 .controls-BaseControl__loadMore {
-   height: @inline_height_default;
+   height: @more_height_list;
 }
 .controls-BaseControl__pagingContainer {
    pointer-events: none;
