--- a/Controls/_menu/Control/_Control.less
+++ b/Controls/_menu/Control/_Control.less
@@ -255,7 +255,7 @@
 }
 
 .controls-Menu__itemActions_position_rightCenter_theme-@{themeName} {
-   top: (@item_height_menu - @height_ItemActions_inside) / 2;
+   top: (@item_height_menu - @height_itemActions) / 2;
    right: 0;
 }
 
