https://online.sbis.ru/opendoc.html?guid=81248495-2648-49c1-b256-c49c0ca7aecb

--- a/Controls-default-theme/aliases/_list.less
+++ b/Controls-default-theme/aliases/_list.less
@@ -57,31 +57,42 @@
 @item_hover_background-color_list:                                  @hover_background-color;
 @master_item_hover_background-color_list:                           #FFFFFF;
 @item_editing_background-color_list:                                #F3F3F3;
+@editing-toolbar_offset-left_listEditInPlace:                       6px;
 
 // Переменные для операций над записью
 //
-//
+// Цвет фона
 
-@editing-toolbar_offset-left_listEditInPlace:                       6px;
+@background-color_itemActions:                                      @item_hover_background-color_list;
+@background-color_outside_itemActions:                              @item_hover_background-color_list;
+@background-color_editing_itemActions:                              @item_editing_background-color_list;
+@master_background-color_itemActions:                               @master_item_hover_background-color_list;
+
+// Размеры и отступы
+
 @offset-right_itemActions:                                          6px;
 @offset-top_itemActions:                                            3px;
 @offset-bottom_itemActions:                                         3px;
 @height_itemActions:                                                @inline_height_m;
-@background-color_itemActions:                                      @item_hover_background-color_list;
-@master_background-color_itemActions:                               @master_item_hover_background-color_list;
+
 @height_outside_itemActions:                                        31px;
-@background-color_outside_itemActions:                              @item_hover_background-color_list;
 @offset-right_outside_itemActions:                                  @offset-right_itemActions;
 @offset-bottom_outside_itemActions:                                 @offset-bottom_itemActions;
 @offset-top_outside_itemActions:                                    4px;
 @corner_width_outside_itemActions:                                  @height_outside_itemActions;
-@background-color_editing_itemActions:                              @item_editing_background-color_list;
+
+@item_offset_itemActions:                                           6px;
+
+// Иконки
+
 @item_icon-size_itemActions:                                        @icon-size_m;
 @item_icon-offset_itemActions:                                      6px;
 @item_icon-size_editing_itemActions:                                @icon-size_s;
 @item_icon_font-family_itemsActions:                                @icon_font-family_m;
 @item_icon_font-family_editing_itemsActions:                        @icon_font-family_s;
-@item_offset_itemActions:                                           6px;
+
+// Текст
+
 @item_caption_min-height_itemActions:                               @inline_height_xs;
 @item_font-size_itemActions:                                        @font-size_default;
 @item_text-color_itemActions:                                       @link_text-color;
