https://online.sbis.ru/opendoc.html?guid=1f4a8704-fe2b-4fb8-abd2-d4de3c417290

--- a/Controls-default-theme/aliases/_list.less
+++ b/Controls-default-theme/aliases/_list.less
@@ -79,7 +79,7 @@
 @offset-right_outside_itemActions:                                  @offset-right_itemActions;
 @offset-bottom_outside_itemActions:                                 @offset-bottom_itemActions;
 @offset-top_outside_itemActions:                                    4px;
-@corner_width_outside_itemActions:                                  @height_outside_itemActions;
+@corner_width_outside_itemActions:                                  24px;
 
 @item_offset_itemActions:                                           6px;
 
