--- a/Controls/_buttons/_Button.less
+++ b/Controls/_buttons/_Button.less
@@ -44,6 +44,20 @@
    }
 }
 
+.controls-Button__icon {
+   order: 1;
+}
+
+.controls-Button__text_captionPosition_left_theme-@{themeName} {
+   order: 0;
+   margin-right: @icon-offset_button;
+}
+
+.controls-Button__text_captionPosition_right_theme-@{themeName} {
+   order: 2;
+   margin-left: @icon-offset_button;
+}
+
 .controls-Button__wrapper_button_xs_theme-@{themeName}:before {
    line-height: @inline_height_xs_button - 2 * @border-thickness_button;
 }
@@ -115,7 +129,7 @@
 
 .controls-Button_button,
 .controls-Button_toolButton,
-.controls-Button_functionalButton, {
+.controls-Button_functionalButton {
    user-select: none;
 }
 
@@ -160,10 +174,6 @@
    .controls-BaseButton:active .controls-text-label_theme-@{themeName} {
       color: @link_hover_text-color;
    }
-}
-
-.controls-Button__text_gap_theme-@{themeName} {
-   margin-left: @icon-offset_button;
 }
 
 .ws-is-hover {
